force-app/main/default/objects/ST_Quotedetails__c/ST_Quotedetails__c.object-meta.xml
<CustomObject>
    <label>見積細目ST</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>見積細目ST名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>