force-app/main/default/objects/ST_Quotedetails__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <formula>quantity__c  *  unitprice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>