force-app/main/default/objects/ST_Quotedetails__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>