force-app/main/default/objects/ST_Quotedetails__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>符号・名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>