force-app/main/default/objects/ST_Quotedetails__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>表示順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>