force-app/main/default/objects/ST_Quotedetails__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <label>仕様・寸法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>