force-app/main/default/objects/ST_Quotedetails__c/fields/ST_Estimate__c.field-meta.xml
<CustomField>
    <fullName>ST_Estimate__c</fullName>
    <label>見積ST</label>
    <referenceTo>ST_Quote__c</referenceTo>
    <relationshipLabel>見積細目ST</relationshipLabel>
    <relationshipName>ST_Estimate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>