force-app/main/default/objects/ST_Quotedetails__c/fields/ST_EstimatedetailOpp__c.field-meta.xml
<CustomField>
    <fullName>ST_EstimatedetailOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>見積細目ST</relationshipLabel>
    <relationshipName>ST_EstimatedetailOpp</relationshipName>
    <type>Lookup</type>
</CustomField>